--- a/sass/popup.scss
+++ b/sass/popup.scss
@@ -9,3 +9,9 @@ input[type=time] {
   height: auto;
   margin: 0;
 }
+
+#allFilters {
+  border-top : solid 1px dimgrey;
+  padding-top : 10px;
+  margin-top : 10px;
+}
