Bug fix + size reduction

--- a/sass/materialize.scss
+++ b/sass/materialize.scss
@@ -17,7 +17,7 @@
 @import "components/typography";
 @import "components/buttons";
 @import "components/form";
-@import "components/roboto";
+//@import "components/roboto";
 //@import "components/icons-material-design";
 //@import "components/navbar";
 //@import "components/cards";
